update read me with validation results

--- a/index.html
+++ b/index.html
@@ -23,26 +23,30 @@
 
 <body>
     <!-- Start Screen -->
-    <div class="container-fluid section" id="start-screen-container">
-        <div class="row">
-            <div class="col-12">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <div>
-                            <h1 class="mb-3"><i class="fa-solid fa-crown"></i>QuizMaster</h1>
-                            <h2 class="mb-4">Challenge Your Mind, One Question at a Time!</h2>
-                        </div>
-                        <div class="d-flex justify-content-center column-gap-2 row-gap-2 button-container">
-                            <button class="btn" id="start-button"><i class="fa-solid fa-play"></i>Start</button>
-                            <button class="btn" id="quick-play-button"><i class="fa-solid fa-forward"></i>Quick Play</button>
-                            <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#howToPlayModal"
-                                id="how-to-play-button"><i class="fa-solid fa-circle-info"></i>How to Play</button>
+    <section>
+        <div class="container-fluid section" id="start-screen-container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <div>
+                                <h1 class="mb-3"><i class="fa-solid fa-crown"></i>QuizMaster</h1>
+                                <h2 class="mb-4">Challenge Your Mind, One Question at a Time!</h2>
+                            </div>
+                            <div class="d-flex justify-content-center column-gap-2 row-gap-2 button-container">
+                                <button class="btn" id="start-button"><i class="fa-solid fa-play"></i>Start</button>
+                                <button class="btn" id="quick-play-button"><i class="fa-solid fa-forward"></i>Quick
+                                    Play</button>
+                                <button type="button" class="btn" data-bs-toggle="modal"
+                                    data-bs-target="#howToPlayModal" id="how-to-play-button"><i
+                                        class="fa-solid fa-circle-info"></i>How to Play</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- How to Play Modal-->
     <!-- Modal -->
@@ -50,7 +54,7 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="howToPlayModalLabel">How to Play</h1>
+                    <h2 class="modal-title fs-5" id="howToPlayModalLabel">How to Play</h2>
                 </div>
                 <div class="modal-body">
                     <p>Welcome to <strong>QuizMaster!</strong> Follow these steps to get started:</p>
@@ -72,139 +76,148 @@
     </div>
 
     <!-- Quiz Parameters Screen-->
-    <div class="container-fluid section" id="quiz-parameters-container">
-        <div class="row">
-            <div class="col-12">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <div>
-                            <h2 class="mb-3"><i class="fa-solid fa-crown"></i>QuizMaster</h2>
-                            <h3 class="mb-3">Customise Your Quiz:</h3>
-                        </div>
-                        <select class="form-select" id="number-of-questions" aria-label="select number of questions">
-                            <option selected>Select Number</option>
-                            <option value="5">5</option>
-                            <option value="10">10</option>
-                            <option value="15">15</option>
-                            <option value="20">20</option>
-                        </select>
-                        <select class="form-select" id="category-of-questions"
-                            aria-label="select category of questions">
-                            <option selected>Select Category</option>
-                            <option value="9">General Knowledge</option>
-                            <option value="10">Books</option>
-                            <option value="11">Film</option>
-                            <option value="12">Music</option>
-                            <option value="13">Musicals and Theatres</option>
-                            <option value="14">Television</option>
-                            <option value="15">Video Games</option>
-                            <option value="16">Board Games</option>
-                            <option value="17">Science and Nature</option>
-                            <option value="18">Computer</option>
-                            <option value="19">Mathematics</option>
-                            <option value="20">Mythology</option>
-                            <option value="21">Sports</option>
-                            <option value="22">Geography</option>
-                            <option value="23">History</option>
-                            <option value="24">Politics</option>
-                            <option value="25">Art</option>
-                            <option value="26">Celebrities</option>
-                            <option value="27">Animals</option>
-                            <option value="28">Vehicles</option>
-                            <option value="29">Comics</option>
-                            <option value="30">Gadgets</option>
-                            <option value="31">Japanese Amime &amp; Manga</option>
-                            <option value="32">Cartoon &amp; Animations</option>
-                        </select>
-                        <select class="form-select" id="difficulty-of-questions"
-                            aria-label="select difficulty of questions">
-                            <option selected>Select Difficulty</option>
-                            <option value="easy">Easy</option>
-                            <option value="medium">Medium</option>
-                            <option value="hard">Hard</option>
-                        </select>
-                        <select class="form-select" id="timer-for-questions"
-                            aria-label="select timer for each question">
-                            <option selected>Select Timer</option>
-                            <option value="10">10s</option>
-                            <option value="15">15s</option>
-                            <option value="20">20s</option>
-                            <option value="30">30s</option>
-                        </select>
-                        <div>
-                            <button class="btn mt-4 mb-3" id="parameter-start-button"><i
-                                    class="fa-solid fa-play"></i>Start</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Quiz Question Screen-->
-    <div class="container-fluid section" id="quiz-question-container">
-        <div class="row">
-            <div class="col-12">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between mb-2">
-                            <i id="home-button" class="fa-solid fa-house"></i>
-                            <h4><i class="fa-solid fa-crown"></i>QuizMaster</h4>
-                        </div>
-                        <div class="mb-1">
-                            <h3 id="progress-tracker">Question 1/10</h3>
-                        </div>
-                        <div class="d-flex justify-content-center mb-3">
-                            <div id="timer-container">
-                                <div id="timer"></div>
+    <section>
+        <div class="container-fluid section" id="quiz-parameters-container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <div>
+                                <h2 class="mb-3"><i class="fa-solid fa-crown"></i>QuizMaster</h2>
+                                <h3 class="mb-3">Customise Your Quiz:</h3>
+                            </div>
+                            <select class="form-select" id="number-of-questions"
+                                aria-label="select number of questions">
+                                <option selected>Select Number</option>
+                                <option value="5">5</option>
+                                <option value="10">10</option>
+                                <option value="15">15</option>
+                                <option value="20">20</option>
+                            </select>
+                            <select class="form-select" id="category-of-questions"
+                                aria-label="select category of questions">
+                                <option selected>Select Category</option>
+                                <option value="9">General Knowledge</option>
+                                <option value="10">Books</option>
+                                <option value="11">Film</option>
+                                <option value="12">Music</option>
+                                <option value="13">Musicals and Theatres</option>
+                                <option value="14">Television</option>
+                                <option value="15">Video Games</option>
+                                <option value="16">Board Games</option>
+                                <option value="17">Science and Nature</option>
+                                <option value="18">Computer</option>
+                                <option value="19">Mathematics</option>
+                                <option value="20">Mythology</option>
+                                <option value="21">Sports</option>
+                                <option value="22">Geography</option>
+                                <option value="23">History</option>
+                                <option value="24">Politics</option>
+                                <option value="25">Art</option>
+                                <option value="26">Celebrities</option>
+                                <option value="27">Animals</option>
+                                <option value="28">Vehicles</option>
+                                <option value="29">Comics</option>
+                                <option value="30">Gadgets</option>
+                                <option value="31">Japanese Amime &amp; Manga</option>
+                                <option value="32">Cartoon &amp; Animations</option>
+                            </select>
+                            <select class="form-select" id="difficulty-of-questions"
+                                aria-label="select difficulty of questions">
+                                <option selected>Select Difficulty</option>
+                                <option value="easy">Easy</option>
+                                <option value="medium">Medium</option>
+                                <option value="hard">Hard</option>
+                            </select>
+                            <select class="form-select" id="timer-for-questions"
+                                aria-label="select timer for each question">
+                                <option selected>Select Timer</option>
+                                <option value="10">10s</option>
+                                <option value="15">15s</option>
+                                <option value="20">20s</option>
+                                <option value="30">30s</option>
+                            </select>
+                            <div>
+                                <button class="btn mt-4 mb-3" id="parameter-start-button"><i
+                                        class="fa-solid fa-play"></i>Start</button>
                             </div>
                         </div>
-                        <div class="mb-3">
-                            <h2 class="card-title" id="question">A</h2>
-                        </div>
-                        <div id="button-container" class="mb-4">
-                            <button class="btn"></button>
-                            <button class="btn"></button>
-                            <button class="btn"></button>
-                            <button class="btn"></button>
-                        </div>
-                        <div>
-                            <button class="btn float-end" id="next-button"><i
-                                    class="fa-solid fa-circle-right"></i>Next</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Quiz Question Screen-->
+    <section>
+        <div class="container-fluid section" id="quiz-question-container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <div class="d-flex justify-content-between mb-2">
+                                <i id="home-button" class="fa-solid fa-house"></i>
+                                <h4><i class="fa-solid fa-crown"></i>QuizMaster</h4>
+                            </div>
+                            <div class="mb-1">
+                                <h3 id="progress-tracker">Question 1/10</h3>
+                            </div>
+                            <div class="d-flex justify-content-center mb-3">
+                                <div id="timer-container">
+                                    <div id="timer"></div>
+                                </div>
+                            </div>
+                            <div class="mb-3">
+                                <h2 class="card-title" id="question">1</h2>
+                            </div>
+                            <div id="button-container" class="mb-4">
+                                <button class="btn">A</button>
+                                <button class="btn">B</button>
+                                <button class="btn">C</button>
+                                <button class="btn">D</button>
+                            </div>
+                            <div>
+                                <button class="btn float-end" id="next-button"><i
+                                        class="fa-solid fa-circle-right"></i>Next</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+
     <audio id="correct-sound" src="assets/sound/correct.mp3" preload="auto"></audio>
     <audio id="incorrect-sound" src="assets/sound/incorrect.mp3" preload="auto"></audio>
     <audio id="complete-sound" src="assets/sound/complete.mp3" preload="auto"></audio>
-    
+
     <!-- Results Screen-->
-    <div class="container-fluid section" id="results-container">
-        <div class="row">
-            <div class="col-12">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <div>
-                            <h2 class="mb-3" id="logo"><i class="fa-solid fa-crown"></i>QuizMaster</h2>
-                        </div>
-                        <div>
-                            <h2 class="card-title mt-2 mb-3">You scored <strong id="score">8</strong> out of <strong
-                                    id="total-questions">10</strong></h2>
-                            <h3 class="card-title mb-3">Great Job! You answered <strong
-                                    id="score-percentage">80</strong><strong>%</strong> of the questions correctly.</h3>
-                        </div>
-                        <div>
-                            <button class="btn" id="play-again-button"><i class="fa-solid fa-play"></i>Play
-                                Again</button>
+    <section>
+        <div class="container-fluid section" id="results-container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card text-center">
+                        <div class="card-body">
+                            <div>
+                                <h2 class="mb-3" id="logo"><i class="fa-solid fa-crown"></i>QuizMaster</h2>
+                            </div>
+                            <div>
+                                <h2 class="card-title mt-2 mb-3">You scored <strong id="score">8</strong> out of <strong
+                                        id="total-questions">10</strong></h2>
+                                <h3 class="card-title mb-3">Great Job! You answered <strong
+                                        id="score-percentage">80</strong><strong>%</strong> of the questions correctly.
+                                </h3>
+                            </div>
+                            <div>
+                                <button class="btn" id="play-again-button"><i class="fa-solid fa-play"></i>Play
+                                    Again</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Toast to display errors-->
     <div class="toast-container position-fixed top-0 end-0 p-3">
@@ -235,7 +248,7 @@
                 </div>
             </div>
         </div>
-    </div>    
+    </div>
 
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
