--- a/index.html
+++ b/index.html
@@ -163,8 +163,9 @@
                                 <h3 id="progress-tracker">Question 1/10</h3>
                             </div>
                             <div class="d-flex justify-content-center mb-3">
-                                <div id="timer-container">
-                                    <div id="timer"></div>
+                                <div id="timer-container" class="progress">
+                                    <div id="timer" class="progress-bar" role="progressbar" style="width: 100%;"
+                                        aria-valuemin="0" aria-valuemax="100"></div>
                                 </div>
                             </div>
                             <div class="mb-3">
