style the modal

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2 class="modal-title fs-5" id="howToPlayModalLabel">How to Play</h2>
+                    <h4 class="modal-title fs-5" id="howToPlayModalLabel"><i class="fa-solid fa-crown"></i>QuizMaster</h4>
                 </div>
                 <div class="modal-body">
                     <p>Welcome to <strong>QuizMaster!</strong> Follow these steps to get started:</p>
